# cognitive_distortion_bot

./: .gitignore  README.md  amvera.yml  dockerfile  plan.md  pyproject.toml
src/: config.py  main.py  temp.py  white_list_example.py
src/commands/: analyze.py  buttons.py  cancel.py  inline_buttons.py  myid.py  start.py
src/database/: __init__.py  base.py  models.py
src/logger/: logger.py
src/middlewares/: __init__.py  user_check_and_log.py
src/services/: database_service.py  thought_analysis.py
src/services/openai/: schema.py  service.py
src/states/: thought_analysis_states.py
